# APRSDongle

./: .gitignore  README.md
Datasheets/: MKL26Z4.h  PEHeader.h
hardware/: .~lock.RF-Head.csv#  2N7002P-215.dcm  2N7002P-215.lib  APRSDongle-B_Cu.gbl  APRSDongle-B_Mask.gbs  APRSDongle-B_SilkS.gbo  APRSDongle-Edge_Cuts.gbr  APRSDongle-F_Cu.gtl  APRSDongle-F_Mask.gts  APRSDongle-F_SilkS.gto  APRSDongle-cache.lib  APRSDongle-drl.rpt  APRSDongle-drl_map.pho  APRSDongle-drl_map.ps  APRSDongle.bak  APRSDongle.cmp  APRSDongle.drl  APRSDongle.kicad_pcb  APRSDongle.kicad_pcb-bak  APRSDongle.net  APRSDongle.pro  APRSDongle.sch  ASPI-6045S-5R6M-T.kicad_mod  DRA818.bak  DRA818.bck  DRA818.dcm  DRA818.lib  KL03-QFN24.lib  KL05.bak  KL05.bck  KL05.dcm  KL05.lib  MKL26Z128VLH4.lib  MOSFET_with_numbers.lib  RF-Head.csv  RF-Head2.lib  _autosave-APRSDongle.kicad_pcb  _autosave-APRSDongle.kicad_pcb-bak  _autosave-APRSDongle.pro  conn_11x2.lib  (+31 more)
hardware/FC0H224ZFTBR24.pretty/: FC0H224ZFTBR24.kicad_mod
hardware/Radio/: MCU.bak  MCU.sch  PA.bak  PA.sch  RF5110G.lib  RFConn.lib  _autosave-radio.kicad_pcb  radio-cache.lib  radio-rescue.lib  radio.bak  radio.kicad_pcb  radio.kicad_pcb-bak  radio.kicad_pcb.bak1  radio.kicad_pcb.bak2  radio.net  radio.pro  radio.sch  radio.xml
hardware/power/: power-cache.lib  power.cmp  power.pro  power.sch  power.xml  tps63020.lib
hardware/powerRev2/: 12Vto3v3.bak  12Vto3v3.sch  _saved_dualIdealDiode.sch  _saved_powerRev2.sch  dualIdealDiode.bak  dualIdealDiode.sch  lifepo4Charger.bak  lifepo4Charger.sch  powerRev2-cache.lib  powerRev2-rescue.lib  powerRev2.bak  powerRev2.cmp  powerRev2.kicad_pcb  powerRev2.kicad_pcb-bak  powerRev2.net  powerRev2.pro  powerRev2.sch  powerRev2.xml
hardware/ultrafit.pretty/: ultraFitCONN_2.kicad_mod
hardwareRev1/: .pro  .~lock.KL26Pinout.csv#  DRA818.kicad_mod  KL26Pinout.csv  MOS_P_NUM.dcm  MOS_P_NUM.lib  PA.sch  RFModuleOutline.kicad_mod  SMA.kicad_mod  _autosave-  avaHabLbr.lbr  conn_11x2.dcm  dra818Real.bak  dra818Real.lib  fp-lib-table  gpsant.lib  hardwareRev1-B_Cu.gbl  hardwareRev1-B_Mask.gbs  hardwareRev1-Edge_Cuts.gbr  hardwareRev1-F_Mask.gts  hardwareRev1-cache.lib  hardwareRev1.bak  hardwareRev1.cmp  hardwareRev1.drl  hardwareRev1.kicad_pcb  hardwareRev1.kicad_pcb-bak  hardwareRev1.net  hardwareRev1.pro  hardwareRev1.sch  open-project.lib  smtJmpOpen.lib
hardwareRev1.pretty/: -B_Cu.gbr  -B_SilkS.gbr  -F_Cu.gbr  -F_SilkS.gbr  .NEO-7.kicad_mod.swp  .drl  1.27mm2X8.kicad_mod  1.27mmPitchHeader11X2.kicad_mod  3.5mmJack.kicad_mod  CortexDebug.kicad_mod  DMP2018LFK-7.kicad_mod  EdgeSMA.kicad_mod  FC0H224ZFTBR24.kicad_mod  FOX924B.kicad_mod  GPSAnt.kicad_mod  LT6105.kicad_mod  MountingHole_.75mm.kicad_mod  NEO-7.kicad_mod  PE4242.kicad_mod  RFModuleOutline.kicad_mod  SMA.kicad_mod  SMDJMP-CLOSED.kicad_mod  SMDJMP-OPEN.kicad_mod  TPS63020.kicad_mod  TREX.kicad_mod  giant.kicad_mod  lifepo4-1004045-3C-folded.kicad_mod  lifepo4-1004045-3C.kicad_mod  lqfp64.kicad_mod  noname.drl  sanic.kicad_mod  tank.kicad_mod
hardwareRev1.pretty/w_smd_lqfp.pretty/: lqfp64.kicad_mod
hardwareRev1/1.27mmHeader.pretty/: 1.27mmPitchHeader.kicad_mod
hardwareRev1/Radio/: .~lock.radio.csv#  AX503.bak  AX503.lib  MCU.sch  PA.bak  PA.sch  PE42424.lib  RF5110G.bak  RF5110G.lib  _saved_PA.sch  fp-lib-table  radio  radio-cache.lib  radio.bak  radio.cmp  radio.csv  radio.kicad_pcb  radio.kicad_pcb-bak  radio.kicad_pcb.bak0  radio.net  radio.pro  radio.sch  radio.xml  tcxo.lib
hardwareRev1/power/: TPS63020.kicad_mod  TPS63020.mod  _autosave-power.kicad_pcb  attiny24a-m.dcm  attiny24a-m.lib  fp-lib-table  giant.kicad_mod  ncp508.dcm  ncp508.lib  power.bak  power.cmp  power.kicad_pcb  power.kicad_pcb-bak  power.net  power.pro
software/: .cproject  .gitignore  .kl05test.g_c  .kl05test.g_x  .project  .~lock.SinWave.ods#  MKL05Z32xxx4.BAT  Makefile  ProcessorExpert.pe  ProjectInfo.xml  SinWave.ods  kl05test.map  kl05test.uvgui.Administrator  kl05test.uvgui.chris  kl05test.uvopt  kl05test.uvproj  make.sh  pemicro_connection_settings.ini  test.srec  uart.lst  uvbuild
software/Documentation/: kl05test.txt  kl05test_SIGNALS.txt  kl05test_Settings.previous.xml  kl05test_Settings.xml
software/Generated_Code/: BitIoLdd1.c  BitIoLdd1.h  CS1.c  CS1.h  Cpu.c  Cpu.h  DA1.c  DA1.h  IO_Map.h  LED1.c  LED1.h  LEDpin1.c  LEDpin1.h  PE_Const.h  PE_Error.h  PE_LDD.c  PE_LDD.h  PE_Types.h  TI1.c  TI1.h  TU1.c  TU1.h  Vectors.c  WAIT1.c  WAIT1.h  ax25.c  ax25.h  cw.c  cw.h
software/KSDK/lib/ksdk_freertos_lib/armgcc/K60D10/: CMakeLists.txt
software/KSDK/lib/ksdk_platform_lib/armgcc/KL02Z4/: CMakeLists.txt
software/KSDK/lib/ksdk_startup_lib/armgcc/KL26Z4/: CMakeLists.txt
software/Sources/: .MKL05.s.swp  Events.c  Events.h  MKL05.s  dra.c  gps.c  gps.h  main.c  uart.c  uart.h  uart.s
software/UVBuild/: ax25.__i  ax25.crf  ax25.d  bitioldd1.__i  bitioldd1.crf  bitioldd1.d  cpu.__i  cpu.crf  cpu.d  cs1.__i  cs1.crf  cs1.d  da1.__i  da1.crf  da1.d  da2.crf  dacldd1.crf  events.__i  events.crf  events.d  kl05test.axf  kl05test.build_log.htm  kl05test.hex  kl05test.hex.mot  kl05test.htm  kl05test.lnp  kl05test_MKL05Z32xxx4.dep  led1.__i  led1.crf  led1.d  ledpin1.__i  ledpin1.crf  ledpin1.d  main.__i  main.crf  main.d  pe_ldd.__i  pe_ldd.crf  pe_ldd.d  startup_arm_cc.__i  (+14 more)
software/hardwareRev1Soft/: .gitignore  .ycm_extra_conf.py  Events.c  JLinkLog.txt  Makefile  PIT.c  PIT.h  aprs.c  ax25.c  ax25.h  ax5043.c  cw.c  cw.h  dac.c  dac.h  delay.c  delay.h  demo.c  dra.c  dra.h  gpio.h  gps.c  gps.h  i2c.c  i2c.h  kl26test2.build_log.htm  kl26test2.uvgui.chris  kl26test2.uvguix.chris  kl26test2.uvopt  kl26test2.uvoptx  kl26test2.uvproj  kl26test2.uvproj.saved_uv4  kl26test2.uvprojx  main.c  queue.c  queue.h  startup_MKL26Z4.s  uart.c  uart.h  uart0.c  (+5 more)
software/mainBoard/: .fuse_hidden0000141200000001  JLinkLog.txt  MKL26Z4.h  Makefile  Makefile.old  PIT.c  PIT.h  aprs.c  aprs.h  ax25.c  ax25.h  ax5043.c  ax5043.c.old  ax5043.h  ax5043.h.gch  cw.c  cw.h  dac.c  dac.h  delay.c  delay.h  dra.c  dra.h  gpio.h  gps.c  gps.h  i2c.c  i2c.h  kl26test2.uvguix.Administrator  (+14 more)
(+1000 files in other folders)
